# MIDIRouter

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
.github/workflows/: ci.yml
code/MIDIRouter/: MIDIThread.cpp  MIDIThread.h  RtMidi.cpp  app_resources.cpp  mainframe.cpp  makefile.vc  midirouterapp.cpp  midirouterapp.h  modes.h  sleep.h
code/MIDIRouter/resources/: MIDIRouter.rc
code/legacy_wx/: MIDIMessage.h  MIDIRouter.pjd  MIDIRouter.sln  MIDIRouter.vcproj  README.txt  app_resources.h  mainframe.h  misc.cpp  misc.h
code/src/: MainWindow.cpp  MainWindow.h  MidiClientWorker.cpp  MidiClientWorker.h  MidiLocalWorker.cpp  MidiLocalWorker.h  MidiPlayoutEngine.cpp  MidiPlayoutEngine.h  MidiServerController.cpp  MidiServerController.h  NetworkMidiProtocol.h  main.cpp  modes.h
vs/: README_VS2022.md  configure_vs2022.bat
